feat: added fitness tracker endpoints
