# models/FitnessCheckIn.go
@@ -1,0 +1,6 @@
+package models
+
+type FitnessCheckInPayload struct {
+	ActiveToday bool   `json:"active_today"`
+	Note        string `json:"note"`
+}
