# models/fitnessHistoryRecord.go
@@ -1,0 +1,11 @@
+package models
+
+import (
+	"time"
+)
+
+type FitnessHistoryRecord struct {
+	Date        time.Time `json:"date"`
+	ActiveToday bool      `json:"active_today"`
+	Note        string    `json:"note"`
+}
